# batch-renderer-test

./: .clang-format  .gitmodules  CMakeLists.txt
assets/shaders/: sprite.frag  sprite.vert
src/: CMakeLists.txt  main.cpp  pch.h
src/core/: application.cpp  application.h
src/math/: transform.h
src/renderer/: camera.cpp  camera.h  renderer.cpp  renderer.h  renderer_basic.cpp  renderer_basic.h  renderer_batch.cpp  renderer_batch.h  renderer_stats.cpp  renderer_stats.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h  texture_region.h
src/scene/: sprite.h
src/utils/: file_reader.cpp  file_reader.h  file_util.cpp  file_util.h  random.cpp  random.h  random_util.cpp  random_util.h
